test/programs/good/example04-bernsteinVaziraniAlgorithm.lq
oracle :: Qbit ** 6 -> Qbit ** 6
oracle qubits = q0, q1, q2, q3, q4, q5 <- qubits;
                q1, q5 <- with [ q1 ] ctrl [ @1 ] gate X q5;
                q2, q5 <- with [ q2 ] ctrl [ @1 ] gate X q5;
                ((q0), (q1), (q2), (q3), (q4), (q5))  -- TODO: fix grammar and remove paranthesis

main :: !(Bit ** 5)
main = q0, q1, q2, q3, q4, q5 <- (new @0, new @0, new @0, new @0, new @0, new @0);
       q5 <- gate X q5;
       q0, q1, q2, q3, q4, q5 <- (gate H q0, gate H q1, gate H q2, gate H q3, gate H q4, gate H q5);
       q0, q1, q2, q3, q4, q5 <- oracle ((q0), (q1), (q2), (q3), (q4), (q5));
       q0, q1, q2, q3, q4 <- (gate H q0, gate H q1, gate H q2, gate H q3, gate H q4);
       (measr q0, measr q1, measr q2, measr q3, measr q4)
